# bbva-digital-analysis

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: pipeline.py
src/analysis/: run_analysis.py
src/analytics/: bank_analyzer.py  linear_regression_analysis.py
src/application/: run_bank_analysis.py
src/config/: db_config.py  logger_config.py
src/data_access/: bank_repository.py
src/domain/: bank_analysis_service.py
src/extract/: bbva_manual_loader.py
src/load/: bank_dimension_loader.py  channel_dimension_loader.py  date_dimension_loader.py  fact_loader.py  mart_loader.py  raw_loader.py  staging_loader.py
tests/: test_bank_repository.py  test_db_conn.py
tests/analytics/: test_bank_analysis.py  test_run_analysis.py
tests/config/: conftest.py
tests/data_access/: test_repository_query_structure.py
tests/domain/: test_bank_analysis_service.py
tests/extract/: test_bbva_manual_loader.py
tests/load/: test_bank_dimension_loader.py  test_channel_dimension_loader.py  test_date_dimension_loader.py  test_fact_loader.py  test_load_raw.py  test_mart_loader.py  test_staging_loader.py
