[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "bbva-digital-analysis"
version = "0.1.0"
description = "Data platform for banking analytics"
authors = [{ name = "Sidhartha Manriquez" }]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]